<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_I_understand_title"> I UNDERSTAND AND AGREE</string>
    <string name="pref_I_understand_summery" translatable="false">NightWatch MUST NOT BE USED TO MAKE MEDICAL DECISIONS. THERE IS NO WARRANTY FOR THE PROGRAM, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES PROVIDE THE PROGRAM “AS IS” WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE PROGRAM IS WITH YOU. SHOULD THE PROGRAM PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL NECESSARY SERVICING, REPAIR OR CORRECTION. </string>
    <string name="app_name">NightWatch</string>
    <string name="action_settings">Settings</string>
    <string name="action_resend_to_watch">Resend glucose to watch</string>
    <string name="action_open_watch_setting">Open Settings on Wear</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_fetch_missing_records">Fetch missing records</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="snooze">Snooze</string>
    <string name="create_new_alert">Create low alert</string>
    <string name="create_high_alert">Create high alert</string>
    <string name="long_press_edit">(Long Press an existing alert to edit)</string>
    <string name="treshold">Threshold:</string>
    <string name="default_snooze">Default Snooze:</string>
    <string name="re_notify">Re-raise every \\n x minutes if\\n unaknowledged:</string>
    <string name="alert_name">Alert Name:</string>
    <string name="alert_tone">Alert Tone:</string>
    <string name="choose_file">Choose file</string>
    <string name="alert_time">Select time for alert:</string>
    <string name="all_day">all day</string>
    <string name="tap_to_change">(tap to change)</string>
    <string name="low">Low</string>
    <string name="mid">Mid</string>
    <string name="high">High</string>
    <string name="alerts_and_messages">Alerts and messages</string>
    <string name="save">Save</string>
    <string name="disable_low_alerts">Disable Low alerts</string>
    <string name="reenable_low_alerts">Re-Enable Low Alerts</string>
    <string name="disable_high_alerts">Disable High alerts</string>
    <string name="reenable_high_alerts">Re-Enable High Alerts</string>
    <string name="disable_all_alerts">Disable All alerts</string>
    <string name="reenable_all_alerts">Re-Enable All Alerts</string>
    <string name="minutes_ago">-- minutes ago</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="range">Range:\\n(in/high/low)</string>
    <string name="absolute">Absolute #s:</string>
    <string name="median_bg">Median BG:</string>
    <string name="mean_bg">Mean BG:</string>
    <string name="hba1c_estimate">HbA1c est.:</string>
    <string name="stddev" translatable="false">StdDev:</string>
    <string name="bg_alerts">BG Alerts</string>
    <string name="bg_alerts_summary">Alert when BG readings cross the threshold.</string>
    <string name="bg_alerts_vibrate" >Vibrate on BG alerts</string>
    <string name="bg_alerts_flashlights" >Flash lights on BG alerts</string>
    <string name="bg_alerts_sound">Play sound on BG alerts</string>
    <string name="bg_alerts_sound_tone">Alert Sound</string>
    <string name="bg_alerts_sound_tone_summary">Set sound used for BG Alerts.</string>
    <string name="bg_alerts_sound_silent">Play alert sounds even in silent mode</string>
    <string name="bg_alerts_snooze">Snooze Between Alerts</string>
    <string name="bg_alerts_snooze_summary">Number of minutes to pass before the system can raise the same alert.</string>
    <string name="bg_level_alerts">BG Level Alerts</string>
    <string name="nightwatch_data_source">NightWatch Data Source</string>
    <string name="read_from_nightscout">Read from NightScout</string>
    <string name="read_from_nightscout_summary">If you are already sending values to nightscout, choose this option.</string>
    <string name="nightscout_url">Nightscout URL</string>
    <string name="nightscout_url_summary">URL for your nightscout site</string>
    <string name="read_from_share">Read from Dexcom Share</string>
    <string name="read_from_share_summary">If you are using Dexcom Share, choose this option.</string>
    <string name="dexcom_login">Dexcom Account Login</string>
    <string name="dexcom_login_summary">Your login for Dexcoms Website</string>
    <string name="dexcom_password_summary">Your password for Dexcoms Website</string>
    <string name="dexcom_password">Dexcom Account Password</string>
    <string name="acceptable_bg_range">Acceptable BG range</string>
    <string name="high_value">High Value</string>
    <string name="high_value_summary">The maximum value you consider to be in range.</string>
    <string name="low_value">Low Value</string>
    <string name="low_value_summary">The minimum value you consider to be in range.</string>
    <string name="bg_units">BG Units</string>
    <string name="widget_show_raw">Show RAW on Widget</string>
    <string name="widget_show_raw_summary">Show three raw values on the widget.</string>
    <string name="widget_show_time">Show Time on Widget</string>
    <string name="widget_show_time_summary">Show Time on Widget (only on smaller widget that can be used to pass through to Samsung Gear watches).</string>
    <string name="alerts_and_notifications">Alerts and Notifications</string>
    <string name="bs_level_alerts_button">Bg Level Alerts</string>
    <string name="bg_alerts_settings_button">BG Alerts Settings</string>
    <string name="other_alerts_button">Other Alerts</string>
    <string name="other_settings">Other Settings</string>
    <string name="recent_errors">View Recent Errors/Warnings</string>
    <string name="other_settings_title">Other Settings</string>
    <string name="persistent_notification">Persistent Notification</string>
    <string name="persistent_notifcation_summary">Display current BG in notification area.</string>
    <string name="watch_integration">Watch Integration</string>
    <string name="android_wear">Android Wear Integration</string>
    <string name="android_wear_summary">Send data to Android Wear Watchface.</string>
    <string name="pebble">Pebble Integration</string>
    <string name="pebble_summary">Send data to Pebble xDrip Watchface.</string>
    <string name="s_minute_ago">Minute ago</string>
    <string name="s_minutes_ago">Minutes ago</string>
    <string name="s_no_alert_silent">No Alert in Silent Mode</string>
    <string name="s_override_silent_mode">Override Silent Mode</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="activity_home" translatable="false">NightWatch</string>
    <string name="activity_stats">Statistics</string>
    <string name="activity_alerts">BG Level Alerts</string>
    <string name="activity_snooze">Snooze Alert</string>
    <string name="activity_edit_alert">Edit Alert</string>
    <string name="activity_errors">Errors</string>
    <string name="adding_high_alert">Adding high alert</string>
    <string name="adding_low_alert">Adding low alert</string>
    <string name="editing_high_alert">Editing high alert</string>
    <string name="editing_low_alert">Editing low alert</string>
    <string name="warning_silent_mode">Warning, no alert will be played at phone silent/vibrate mode!!!</string>
    <string name="treshold_range">Treshold has to be between $1 and $2.</string>
    <string name="unique_treshold">Each alert should have it\'s own threshold. Please choose another threshold.</string>
    <string name="high_alert_low">High alert threshold has to be higher than all low alerts. Please choose another threshold.</string>
    <string name="low_alert_hight">Low alert threshold has to be lower than all high alerts. Please choose another threshold.</string>
    <string name="invalid_number">Invalid number:</string>
    <string name="reraise_low">Reraise Value must be 1 minute or greater.</string>
    <string name="reraise_snooze">Reraise Value must be less than snooze length</string>
    <string name="alert_start_end">Start time and end time of alert cannot be equal.</string>
    <string name="alert_type">What type of Alert?</string>
    <string name="select_tone">Select tone for Alerts:</string>
    <string name="select_file">Select file for alert</string>
    <string name="select_time">Select Time</string>
    <string name="snooze_this_alert">Snooze this alert...</string>
    <string name="bg_unavailable">BG Reading Unavailable</string>
    <string name="service_running">xDrip Data collection service is running.</string>
    <string name="unclear_readings">Unclear Sensor Readings</string>
    <string name="missed_readings">BG Readings Missed</string>
    <string name="no_active_alert">No active alert exists</string>
    <string name="active_alert_snoozed">Active alert exists named "$1". Alert snoozed until $1 ($3 minutes left). </string>
    <string name="active_alert">Active alert exists named "$1" (not snoozed).</string>
    <string name="stats_swipe">Swipe left/right to switch between reports!</string>
    <string name="override_silent_mode">Override phone Silent Mode:</string>
    <string name="test_alert">test alert</string>
    <string name="save_alert">save alert</string>
    <string name="remove_alert">remove alert</string>
    <string name="snooze_before_fire">snooze alert before it fires</string>
    <string name="vibrate_alert">Vibrate on alert:</string>
    <string name="bg_alerts_profile">BG alerts profile</string>
    <string name="smart_snoozing">Smart Snoozing</string>
    <string name="smart_snoozing_summary">Keep snoozing if bg is heading in the right direction.</string>
    <string name="smart_alerting">Smart alerting</string>
    <string name="smart_alerting_summary">Don\'t alert if bg is heading in the right direction</string>
    <string name="missed_readings_title">Missed Readings</string>
    <string name="missed_reading_alerts">Missed Reading Alerts</string>
    <string name="missed_readings_delay">Minutes until alerting for missed readings</string>
    <string name="missed_readings_delay_summary">Alert if no data receieved in x minutes</string>
    <string name="bg_falling_rising">Falling/Rising BG</string>
    <string name="bg_falling_fast">Bg falling fast</string>
    <string name="falling_treshold">falling threshold</string>
    <string name="bg_rising_fast">Bg rising fast</string>
    <string name="rising_treshold">rising threshold</string>
    <string name="alert_preferences">Alert Preferences (for these alerts)</string>
    <string name="alert_sound">Alert Sound</string>
    <string name="override_silent_these">Override Silent mode on these alerts</string>
    <string name="alert_snooze_these">Alert Snooze</string>
    <string name="alert_snooze_these_summary">Minimum number of minutes to pass before raising the same alert.</string>
</resources>
