<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/acceptable_bg_range"
        android:key="bgRange">
        <EditTextPreference
            android:key="highValue"
            android:title="@string/high_value"
            android:numeric="decimal"
            android:summary="@string/high_value_summary"
            android:defaultValue="170" />
        <EditTextPreference
            android:key="lowValue"
            android:title="@string/low_value"
            android:numeric="decimal"
            android:summary="@string/low_value_summary"
            android:defaultValue="70" />
        <ListPreference
            android:key="units"
            android:title="@string/bg_units"
            android:entries="@array/bgUnitEntries"
            android:entryValues="@array/bgUnitValues"
            android:defaultValue="mgdl"/>
        <CheckBoxPreference
            android:key="widget_show_raw"
            android:title="@string/widget_show_raw"
            android:summary="@string/widget_show_raw_summary"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="widget_show_time"
            android:title="@string/widget_show_time"
            android:summary="@string/widget_show_time_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
