<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/bg_level_alerts"
        android:key="bgLevelAlerts">
        <CheckBoxPreference
            android:key="bg_notifications"
            android:title="@string/bg_alerts"
            android:summary="@string/bg_alerts_summary"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:dependency="bg_notifications"
            android:key="bg_vibrate"
            android:title="@string/bg_alerts_vibrate"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:dependency="bg_notifications"
            android:key="bg_lights"
            android:title="@string/bg_alerts_flashlights"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:dependency="bg_notifications"
            android:key="bg_play_sound"
            android:title="@string/bg_alerts_sound"
            android:defaultValue="true" />
        <RingtonePreference
            android:dependency="bg_play_sound"
            android:key="bg_notification_sound"
            android:title="@string/bg_alerts_sound_tone"
            android:ringtoneType="notification"
            android:summary="@string/bg_alerts_sound_tone_summary"
            android:defaultValue="content://settings/system/notification_sound" />
        <CheckBoxPreference
            android:dependency="bg_play_sound"
            android:key="bg_sound_in_silent"
            android:title="@string/bg_alerts_sound_silent"
            android:defaultValue="false" />
        <EditTextPreference
            android:dependency="bg_notifications"
            android:key="bg_snooze"
            android:title="@string/bg_alerts_snooze"
            android:numeric="integer"
            android:summary="@string/bg_alerts_snooze_summary"
            android:defaultValue="20" />
    </PreferenceCategory>
</PreferenceScreen>
